# just_for_fun

./: .gitignore  CMakeLists.txt  LICENSE  MicrosoftGame.config
assets/: shader.frag  shader.vert
assets/shaders/: box_actor.frag  box_actor.vert  point_light.frag  point_light.vert  shader.frag  shader.vert
assets/shaders/glsl/: box_actor.frag  box_actor.vert  point_light.frag  point_light.vert
assets/shaders/hlsl/: box_actor.frag  box_actor.vert  common.hlsli  point_light.frag  point_light.vert
docs/: LookAt.ipynb  LookAt.sketch
lib/: CMakeLists.txt
lib/math/: CMakeLists.txt  line.cpp  line.hpp  matrix.cpp  matrix.hpp  nearly.hpp  plane.cpp  plane.hpp  quaternion.cpp  quaternion.hpp  transform.cpp  transform.hpp  vector.cpp  vector.hpp
lib/stb/: Image.hpp
lib/winapi/: ComPtr.hpp  Event.hpp  Functions.cpp  Functions.hpp  Object.hpp
src/: App.cpp  App.hpp  BoxActor.cpp  BoxActor.hpp  BoxMesh.cpp  BoxMesh.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GUI.cpp  GUI.hpp  PointLight.cpp  PointLight.hpp  RHI.hpp  Stopwatch.hpp  Utils.cpp  Utils.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  main.cpp
src/common/render/: Vertex.cpp  Vertex.hpp
src/dx12/: BoxMesh.cpp  BoxMesh.hpp  Context.cpp  Context.hpp  Mesh.cpp  Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp
src/dx12/details/: CommandQueue.cpp  CommandQueue.hpp  ConstantBuffer.cpp  ConstantBuffer.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  DescriptorTable.cpp  DescriptorTable.hpp  Exceptions.hpp  Frame.cpp  Frame.hpp  Platform.hpp  SwapChain.cpp  SwapChain.hpp
src/dx12/render/: BoxMesh.cpp  BoxMesh.hpp  CommandQueue.cpp  Context.cpp  Context.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  Frame.cpp  Frame.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SwapChain.cpp  SwapChain.hpp  Texture2D.cpp  Texture2D.hpp
src/dx12/render/details/: CommandQueue.cpp  CommandQueue.hpp  ConstantBuffer.cpp  ConstantBuffer.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  DescriptorTable.cpp  DescriptorTable.hpp  Exceptions.hpp  Frame.cpp  Frame.hpp  SwapChain.cpp
src/opengl/: BoxMesh.cpp  BoxMesh.hpp  Context.cpp  Context.hpp  Mesh.cpp  Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp
src/opengl/render/: BoxMesh.hpp  Context.hpp  ShaderProgram.hpp  Texture2D.hpp
src/rhi/: BoxMesh.hpp  Context.cpp  Context.hpp  Mesh.cpp  Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  Vertex.cpp  Vertex.hpp
src/rhi/dx12/: BoxMesh.cpp  BoxMesh.hpp  CommandQueue.cpp  CommandQueue.hpp  Context.cpp  Context.hpp  DX12.cpp  DX12.hpp  Exceptions.hpp  Frame.cpp  Frame.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SwapChain.cpp  SwapChain.hpp  Texture2D.cpp  Texture2D.hpp
src/rhi/opengl/: OpenGL.cpp  OpenGL.hpp
src/rhi/vulkan/: Vulkan.hpp
src/vulkan/: BoxMesh.cpp  BoxMesh.hpp  Context.cpp  Context.hpp  Mesh.cpp  Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp
src/vulkan/details/: Buffer.cpp  Buffer.hpp  Frame.cpp  Frame.hpp  Image.cpp  Image.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp
src/vulkan/render/: BoxMesh.hpp  Context.cpp  Context.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.hpp
src/vulkan/render/impl/: Frame.cpp  Frame.hpp  Image.cpp  Image.hpp  PhysicalDeviceSelector.cpp  PhysicalDeviceSelector.hpp
